--- a/.github/workflows/authenticate.yml
+++ b/.github/workflows/authenticate.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
   env:
-    DJNAGO_SECRET_KEY: ${{ secret.DJANGO_SECRET_KEY }}
+    DJANGO_SECRET_KEY: ${{ secret.DJANGO_SECRET_KEY }}
 
   steps:
     # Step 1: Checkout the code
